--- a/IPTV/Main.storyboard
+++ b/IPTV/Main.storyboard
@@ -11,10 +11,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Player View Controller-->
+        <!--Overlay View Controller-->
         <scene sceneID="mvp-1j-Bwo">
             <objects>
-                <viewController id="SkH-8H-QVn" customClass="playerViewController" customModule="IPTV" customModuleProvider="target" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ISJ-hj-wuR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="SkH-8H-QVn" userLabel="Overlay View Controller" customClass="OverlayViewController" customModule="IPTV" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="3t3-h5-VOD"/>
                         <viewControllerLayoutGuide type="bottom" id="tnQ-2O-6Hy"/>
@@ -23,10 +24,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j47-gL-r2i" userLabel="videoView">
-                                <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="66" sectionHeaderHeight="66" sectionFooterHeight="66" translatesAutoresizingMaskIntoConstraints="NO" id="Tv4-bP-U28" userLabel="channels">
                                 <rect key="frame" x="20" y="0.0" width="558" height="1080"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -73,28 +70,40 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f1x-bp-y1G">
+                                <rect key="frame" x="20" y="0.0" width="1920" height="1080"/>
+                                <connections>
+                                    <segue destination="JhA-8B-Ane" kind="embed" identifier="EmbedSegue" id="AiN-fB-A4E"/>
+                                </connections>
+                            </containerView>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="j47-gL-r2i" firstAttribute="top" secondItem="3t3-h5-VOD" secondAttribute="bottom" id="3Du-A1-L6U"/>
+                            <constraint firstItem="f1x-bp-y1G" firstAttribute="leading" secondItem="DZD-F9-aTD" secondAttribute="leadingMargin" id="5sm-Er-oPS"/>
+                            <constraint firstItem="f1x-bp-y1G" firstAttribute="height" secondItem="DZD-F9-aTD" secondAttribute="height" id="E8o-EB-V6H"/>
                             <constraint firstItem="tnQ-2O-6Hy" firstAttribute="top" secondItem="Tv4-bP-U28" secondAttribute="bottom" id="LZp-s1-e2r"/>
-                            <constraint firstItem="j47-gL-r2i" firstAttribute="width" secondItem="DZD-F9-aTD" secondAttribute="width" id="Pye-iJ-siP"/>
-                            <constraint firstItem="j47-gL-r2i" firstAttribute="centerX" secondItem="DZD-F9-aTD" secondAttribute="centerX" id="QMf-zn-QIf"/>
-                            <constraint firstItem="j47-gL-r2i" firstAttribute="height" secondItem="DZD-F9-aTD" secondAttribute="height" id="SDX-yZ-Ryo"/>
                             <constraint firstItem="Tv4-bP-U28" firstAttribute="top" secondItem="3t3-h5-VOD" secondAttribute="bottom" id="XL4-D0-e05"/>
-                            <constraint firstItem="tnQ-2O-6Hy" firstAttribute="top" secondItem="j47-gL-r2i" secondAttribute="bottom" id="YML-IT-T2h"/>
+                            <constraint firstItem="f1x-bp-y1G" firstAttribute="width" secondItem="DZD-F9-aTD" secondAttribute="width" id="c85-tp-qbJ"/>
+                            <constraint firstItem="f1x-bp-y1G" firstAttribute="top" secondItem="3t3-h5-VOD" secondAttribute="bottom" id="jOp-lk-uKa"/>
                             <constraint firstItem="Tv4-bP-U28" firstAttribute="leading" secondItem="DZD-F9-aTD" secondAttribute="leadingMargin" id="m62-DW-51w"/>
-                            <constraint firstItem="j47-gL-r2i" firstAttribute="centerY" secondItem="DZD-F9-aTD" secondAttribute="centerY" id="tcD-gr-Cbo"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="channelsTableView" destination="Tv4-bP-U28" id="zXS-SX-z7y"/>
-                        <outlet property="videoView" destination="j47-gL-r2i" id="Sqx-q7-MAb"/>
+                        <outlet property="playerView" destination="f1x-bp-y1G" id="cIO-wc-4lM"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ISJ-hj-wuR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="168" y="215"/>
+        </scene>
+        <!--Player View Controller-->
+        <scene sceneID="NPc-nC-3gz">
+            <objects>
+                <avPlayerViewController storyboardIdentifier="PlayerViewController" autoresizesArchivedViewToFullSize="NO" automaticallyAdjustsScrollViewInsets="NO" definesPresentationContext="YES" providesPresentationContextTransitionStyle="YES" modalPresentationStyle="overCurrentContext" videoGravity="AVLayerVideoGravityResizeAspectFill" id="JhA-8B-Ane" userLabel="Player View Controller" customClass="PlayerViewController" customModule="IPTV" customModuleProvider="target" sceneMemberID="viewController">
+                    <value key="contentSizeForViewInPopover" type="size" width="1920" height="1080"/>
+                </avPlayerViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gQA-Vq-6Jx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="168" y="1958"/>
         </scene>
     </scenes>
 </document>
